<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mosmann.kaffee_kasse.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ausgaben"
        android:name="com.mosmann.kaffee_kasse.ui.ausgaben.AusgabenFragment"
        android:label="@string/title_ausgaben"
        tools:layout="@layout/fragment_ausgaben" />

    <fragment
        android:id="@+id/navigation_einnahmen"
        android:name="com.mosmann.kaffee_kasse.ui.einnahmen.EinnahmenFragment"
        android:label="@string/title_einnahmen"
        tools:layout="@layout/fragment_einnahmen" />
    <fragment
        android:id="@+id/navigation_uebersicht"
        android:name="com.mosmann.kaffee_kasse.ui.uebersicht.UebersichtFragment"
        android:label="@string/title_uebersicht"
        tools:layout="@layout/fragment_uebersicht" />
</navigation>