<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ausgaben.AusgabenFragment">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:entries="@array/options"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_menge_eingeben"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/menge_eingeben"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <EditText
        android:id="@+id/et_gesamtpreis_eingeben"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/gesamt_preis_eingeben"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_menge_eingeben" />

    <EditText
        android:id="@+id/et_kommentar1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/kommentar"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_gesamtpreis_eingeben" />

    <Button
        android:id="@+id/btn_bestaetigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bestaetigen"
        app:layout_constraintEnd_toStartOf="@+id/btn_felder_leeren"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_kommentar1" />

    <Button
        android:id="@+id/btn_felder_leeren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/felder_leeren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_bestaetigen"
        app:layout_constraintTop_toTopOf="@+id/btn_bestaetigen" />


</androidx.constraintlayout.widget.ConstraintLayout>